--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,20 @@
   color: #F37972; /*base orange*/
   display: inline-block;
 }
+
+/*Hero Styles*/
+.hero {
+  background-image: url('../img/hero.jpg');
+  height: 350px;
+  background-position: center;
+  background-size: cover;
+  padding-top: 40px;
+}
+
+.white-text {
+  color: #fff;
+}
+
+.hero .white-text {
+  font-size: 2em;
+}
